# raytracing_weekend

./: Cargo.toml  README.md  output model.ppm  output.ppm  scene.yaml  scene_aabb.yaml  scene_plane.yaml  scene_triangle.yaml
src/: bvh.rs  main.rs  ppm.rs  scene.rs  vec3.rs
